# thermalstats-cli

./: .gitignore  Cargo.toml  LICENSE  OpenCL.def  OpenCL.exp  OpenCL.lib  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
lhm/: ThermalDebug.cs  ThermalReader.cs
src/: afterburner.rs  aida64.rs  coretemp.rs  hardware.rs  hwinfo.rs  lang.rs  lhm.rs  main.rs  stress.rs  submit.rs  temps.rs
